--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "dev": "nodemon app.js"
   },
   "dependencies": {
-    "express": "^4.17.2"
+    "dotenv": "^15.0.0",
+    "express": "^4.17.2",
+    "mongoose": "^6.1.10"
   },
   "devDependencies": {
     "nodemon": "^2.0.15",
