--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "dev": "nodemon app.js"
   },
   "dependencies": {
+    "bcrypt": "^5.0.1",
+    "cookie-session": "^2.0.0",
     "dotenv": "^15.0.0",
     "express": "^4.17.2",
     "mongoose": "^6.1.10"
